--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -187,7 +187,7 @@ debugging
 development
 	\db\schema.sql is latest database schema. should be able to rerun in and create new blank schema
 	\misc\ for general docs and useful info, nothing in here is referenced by the application
-	\misc\cron_update shell script and php files to call the updating of index from cli
+	\misc\update_scripts\ shell and batch scripts and php files to call the updating of index from cli
 	\nzbfiles default folder for all gzipped nzbs to be stored
 	\www\install installer files
 	\www\lib\framework few general classes for db/http code
@@ -205,7 +205,7 @@ development
 	enstyne@irc.cyberarmy.net	regexs
 	gizmore@wechall.net			password,hash
 	lhbandit@nzbs.org			yenc,nntp,bokko,dev	
-	bb@newznab						dev
+	bb@newznab					dev
 	jayhawk@nzb.su				testing,icons	
 	midgetspy@sickbeard			rage integration,api
 	ueland@newznab				installer
