remove cover art
git-svn-id: svn://svn.newznab.com/nn/trunk@901 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -45,7 +45,8 @@ running	outside of root website
 	set /.htaccess RewriteBase to your virtual directory
 	
 sample apache config for your your VHOST. 
-	add this to your exist VHOST file modifying your values for ServerName, Server Alias, and DocumentRoot.  You should find this under /etc/apache2/sites-enabled/ (000-default).	
+	add this to your exist VHOST file modifying your values for ServerName, Server Alias, and DocumentRoot.  
+	You should find this under /etc/apache2/sites-enabled/ (000-default).	
 	<VirtualHost *:80>
 	        <Directory /domains/www/example.com/newz/www/>
 	                Options FollowSymLinks
