work in progress on the rar password checking.
git-svn-id: svn://svn.newznab.com/nn/trunk@926 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -217,6 +217,7 @@ development
 	midgetspy@sickbeard			rage integration,api
 	ueland@newznab				installer
 	ensi@ensisoft.com			api
+	hecks@tvnzb					rar api
 	michael@newznab				dev
 	sakarias@newznab			testing
 	pairdime@sabnzbd			jquery,css
