--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -47,7 +47,7 @@ running	outside of root website
 	set /.htaccess RewriteBase to your virtual directory
 	
 sample apache config for your your VHOST. 
-	add this to your exist VHOST file modifying your values for ServerName, Server Alias, and DocumentRoot.  
+	add this to your existing VHOST file modifying your values for ServerName, Server Alias, and DocumentRoot.  
 	You should find this under /etc/apache2/sites-enabled/ (000-default).	
 	<VirtualHost *:80>
 	        <Directory /domains/www/example.com/newz/www/>
