lighttpd rewrite rules
git-svn-id: svn://svn.newznab.com/nn/trunk@1027 a8b8df2f-1e19-4095-b43c-2e6d618ca476

--- a/INSTALL.txt
+++ b/INSTALL.txt
@@ -231,5 +231,6 @@ development
 	inpheaux@sabnzbd			design,nzb
 	spooge@newznab				testing
 	sy@newznab					testing, regexs
+	magegmins@newznab			lighttpd rewrite rules
 	fubaarr@newznab				testing
 	mobiKalw@newznab			testing
